// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note should render correctly 1`] = `
"<div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>note<style>
        .note {
          line-height: 1.8;
          border: 1px solid #eaeaea;
          color: #000;
          background-color: #fff;
          border-radius: 5px;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.667 * 16px) calc(1.32 * 16px) calc(0.667 * 16px)
            calc(1.32 * 16px);
          margin: 0 0 0 0;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 0.38em;
        }
      </style></div>"
`;

exports[`Note should work with different styles 1`] = `
"<div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>secondary<style>
        .note {
          line-height: 1.8;
          border: 1px solid #666;
          color: #666;
          background-color: #fff;
          border-radius: 5px;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.667 * 16px) calc(1.32 * 16px) calc(0.667 * 16px)
            calc(1.32 * 16px);
          margin: 0 0 0 0;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 0.38em;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>success<style>
        .note {
          line-height: 1.8;
          border: 1px solid #0070f3;
          color: white;
          background-color: #0070f3;
          border-radius: 5px;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.667 * 16px) calc(1.32 * 16px) calc(0.667 * 16px)
            calc(1.32 * 16px);
          margin: 0 0 0 0;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 0.38em;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>warning<style>
        .note {
          line-height: 1.8;
          border: 1px solid #000;
          color: #fff;
          background-color: #000;
          border-radius: 5px;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.667 * 16px) calc(1.32 * 16px) calc(0.667 * 16px)
            calc(1.32 * 16px);
          margin: 0 0 0 0;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 0.38em;
        }
      </style></div></div>"
`;

exports[`Note should work with different types 1`] = `
"<div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>secondary<style>
        .note {
          line-height: 1.8;
          border: 1px solid #666;
          color: #666;
          background-color: #fff;
          border-radius: 5px;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.667 * 16px) calc(1.32 * 16px) calc(0.667 * 16px)
            calc(1.32 * 16px);
          margin: 0 0 0 0;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 0.38em;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>success<style>
        .note {
          line-height: 1.8;
          border: 1px solid #0070f3;
          color: #0070f3;
          background-color: #fff;
          border-radius: 5px;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.667 * 16px) calc(1.32 * 16px) calc(0.667 * 16px)
            calc(1.32 * 16px);
          margin: 0 0 0 0;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 0.38em;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>warning<style>
        .note {
          line-height: 1.8;
          border: 1px solid #f5a623;
          color: #f5a623;
          background-color: #fff;
          border-radius: 5px;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.667 * 16px) calc(1.32 * 16px) calc(0.667 * 16px)
            calc(1.32 * 16px);
          margin: 0 0 0 0;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 0.38em;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>error<style>
        .note {
          line-height: 1.8;
          border: 1px solid #e00;
          color: #e00;
          background-color: #fff;
          border-radius: 5px;
          font-size: calc(0.875 * 16px);
          width: auto;
          height: auto;
          padding: calc(0.667 * 16px) calc(1.32 * 16px) calc(0.667 * 16px)
            calc(1.32 * 16px);
          margin: 0 0 0 0;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 0.38em;
        }
      </style></div></div>"
`;
